--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "express": "3.0.3",
     "ejs": "*",
-    "less-middleware": "*",
+    "socket.io": "*",
+    "less-middleware": "*"
   }
 }
